fix scroll overflow

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -48,6 +48,7 @@ html {
   font-size: 62.5%;
   scroll-behavior: smooth;
   scroll-padding-top: 4rem;
+  overflow-x: hidden;
 }
 
 body {
